@@ -23,7 +23,7 @@ Class nextAction();
 {
 	[super init];
 
-	isEventHandler = YES;
+	isTouchEnabled = YES;
 
 	grossini = [[Sprite spriteFromFile:@"grossini.png"] retain];
 	
